Added skeleton for more activities also fixed existing activities
I fixed the login activity's design (the functionality is NOT fixed). I
used a linear layout stack which I find works pretty well for what we're
doing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,14 @@
             android:name=".RoomsActivity"
             android:label="@string/title_activity_rooms" >
         </activity>
+        <activity
+            android:name=".Register"
+            android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name=".ActiveRoom"
+            android:label="@string/title_activity_active_room" >
+        </activity>
     </application>
 
 </manifest>
