Created the base functionality for the Create Room Activity
It should be noted that TODO items are piling up at this point. I'm just
trying to get a framework together so that we have something interesting
to display.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".ActiveRoom"
             android:label="@string/title_activity_active_room" >
         </activity>
+
+        <activity
+            android:name=".CreateRoomActivity"
+            android:label="@string/title_activity_create_room" >
+        </activity>
     </application>
 
 </manifest>
