--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile files('libs/gson-2.4.jar')
 }
