Linked all activities and started putting some communication logic in between activities.
All activities are logically linked and most of the logic for
cross-population is "working". We need to fix some down-stream
population logic for the Room object as well as a few other loose ends.
There's approximately 10 million TODO items, now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
             android:name=".CreateRoomActivity"
             android:label="@string/title_activity_create_room" >
         </activity>
+
+        <activity
+            android:name=".RoomEditActivity"
+            android:label="@string/title_activity_edit_room" >
+        </activity>
+
     </application>
 
 </manifest>
