--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/gson-2.4.jar')
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
-    compile files('libs/gson-2.4.jar')
+    compile 'com.google.android.gms:play-services:7.8.0'
 }
