--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="ANDROID.PERMISSION.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
@@ -37,17 +41,26 @@
             android:name=".ActiveRoom"
             android:label="@string/title_activity_active_room" >
         </activity>
-
         <activity
             android:name=".CreateRoomActivity"
             android:label="@string/title_activity_create_room" >
         </activity>
-
         <activity
             android:name=".RoomEditActivity"
             android:label="@string/title_activity_edit_room" >
         </activity>
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".ActiveLocation"
+            android:label="@string/title_activity_active_location" >
+        </activity>
     </application>
 
 </manifest>
