--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:icon="@drawable/walker_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="20"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
