--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/walker_icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:windowSoftInputMode="adjustResize">
         <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="20"/>
         <activity
             android:name=".MainActivity"
